# gerbex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gerber.py  render_mpl.py  test_gerber.py  test_vertices.py  vertices.py
Gerber_File_Format_Examples 20210409/: 2-13-2_Polarities_and_Apertures.gbr  4-6-4_Nested_blocks.gbr  6-1-6-2_A_drill_file.gbr  SMD_prim_20.gbr  SMD_prim_20_X1.gbr  SMD_prim_21.gbr  SMD_prim_21_X1.gbr
src/: Aperture.cpp  Aperture.h  ApertureTemplate.cpp  ApertureTemplate.h  ApertureTransformation.cpp  ApertureTransformation.h  Arc.cpp  Arc.h  BlockAperture.cpp  BlockAperture.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleTemplate.cpp  CircleTemplate.h  CommandHandler.cpp  CommandHandler.h  CommandParser.cpp  CommandParser.h  CommandsProcessor.cpp  CommandsProcessor.h  Coordinate.cpp  Coordinate.h  CoordinateData.cpp  CoordinateData.h  CoordinateFormat.cpp  CoordinateFormat.h  DataTypeParser.cpp  DataTypeParser.h  Draw.cpp  Draw.h  FileParser.cpp  FileParser.h  FileProcessor.cpp  FileProcessor.h  Flash.cpp  Flash.h  GenericPoint.h  GerberFileProcessor.cpp  GerberFileProcessor.h  (+47 more)
src/cgal/: CMakeLists.txt  CgalSerializer.cpp  CgalSerializer.h
src/graphics/: Aperture.cpp  Aperture.h  ApertureTemplate.cpp  ApertureTemplate.h  ApertureTransformation.cpp  ApertureTransformation.h  Arc.cpp  Arc.h  ArcSegment.cpp  ArcSegment.h  BlockAperture.cpp  BlockAperture.h  Box.cpp  Box.h  CMakeLists.txt  Circle.cpp  Circle.h  CircleTemplate.cpp  CircleTemplate.h  Contour.cpp  Contour.h  DataTypeParser.cpp  DataTypeParser.h  Draw.cpp  Draw.h  Expression.cpp  Expression.h  Flash.cpp  Flash.h  GraphicalObject.cpp  GraphicalObject.h  Macro.cpp  Macro.h  MacroCenterLine.cpp  MacroCenterLine.h  MacroCircle.cpp  MacroCircle.h  MacroOutline.cpp  MacroOutline.h  MacroPolygon.cpp  (+37 more)
src/processing/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  CommandsProcessor.cpp  CommandsProcessor.h  CoordinateData.cpp  CoordinateData.h  CoordinateFormat.cpp  CoordinateFormat.h  DataTypeParser.cpp  DataTypeParser.h  FileParser.cpp  FileParser.h  FileProcessor.cpp  FileProcessor.h  GraphicsState.cpp  GraphicsState.h
src/svg/: CMakeLists.txt  SvgSerializer.cpp  SvgSerializer.h
test/: AllTests.cpp  CMakeLists.txt  Comparators.h  test_Aperture.cpp  test_ApertureTransformation.cpp  test_Arc.cpp  test_BlockAperture.cpp  test_Circle.cpp  test_CircleTemplate.cpp  test_CommandHandler.cpp  test_CommandParser.cpp  test_CommandsProcessor.cpp  test_Coordinate.cpp  test_CoordinateData.cpp  test_CoordinateFormat.cpp  test_DataTypeParser.cpp  test_Draw.cpp  test_FileParser.cpp  test_FileProcessor.cpp  test_Flash.cpp  test_GerberFileProcessor.cpp  test_GraphicalObject.cpp  test_GraphicsState.cpp  test_Macro.cpp  test_MacroCenterLine.cpp  test_MacroCircle.cpp  test_MacroOutline.cpp  test_MacroPolygon.cpp  test_MacroPrimitive.cpp  test_MacroTemplate.cpp  test_MacroThermal.cpp  test_MacroVectorLine.cpp  test_Obround.cpp  test_ObroundTemplate.cpp  test_Point.cpp  test_Polygon.cpp  test_PolygonTemplate.cpp  test_Rectangle.cpp  test_RectangleTemplate.cpp  test_Region.cpp  (+4 more)
test/cgal/: CMakeLists.txt  cgal_demo.cpp  test_CgalSerializer.cpp
test/graphics/: CMakeLists.txt  GraphicsStringFrom.cpp  GraphicsStringFrom.h  GraphicsTestHelpers.cpp  GraphicsTestHelpers.h  MockAperture.cpp  MockAperture.h  test_ApertureTransformation.cpp  test_Arc.cpp  test_ArcSegment.cpp  test_BlockAperture.cpp  test_Box.cpp  test_Circle.cpp  test_CircleTemplate.cpp  test_Contour.cpp  test_DataTypeParser.cpp  test_Draw.cpp  test_Expression.cpp  test_Flash.cpp  test_Macro.cpp  test_MacroCenterLine.cpp  test_MacroCircle.cpp  test_MacroOutline.cpp  test_MacroPolygon.cpp  test_MacroPrimitive.cpp  test_MacroTemplate.cpp  test_MacroThermal.cpp  test_MacroVectorLine.cpp  test_Obround.cpp  test_ObroundTemplate.cpp  test_Point.cpp  test_Polarity.cpp  test_Polygon.cpp  test_PolygonTemplate.cpp  test_Rectangle.cpp  test_RectangleTemplate.cpp  test_Region.cpp  test_RegionContour.cpp  test_Segment.cpp  test_StepAndRepeat.cpp  (+1 more)
test/processing/: CMakeLists.txt  CastHelpers.h  MockAperture.cpp  MockAperture.h  MockCommandsProcessor.cpp  MockCommandsProcessor.h  MockTemplate.cpp  MockTemplate.h  test_CommandHandler.cpp  test_CommandsProcessor.cpp  test_CoordinateData.cpp  test_CoordinateFormat.cpp  test_DataTypeParser.cpp  test_FileParser.cpp  test_FileProcessor.cpp  test_GraphicsState.cpp
test/svg/: CMakeLists.txt  test_SvgSerializer.cpp
