add_library(libgerbex
	Arc.cpp
	Aperture.cpp
	ApertureTransformation.cpp
	Circle.cpp
	CommandsProcessor.cpp
	CoordinateFormat.cpp
	Draw.cpp
	Flash.cpp
	GraphicalObject.cpp
	GraphicsState.cpp
	Obround.cpp
	Point.cpp
	Polygon.cpp
	Rectangle.cpp
	Region.cpp
	RegionContour.cpp
	Segment.cpp
	SyntaxParser.cpp
)

target_include_directories(libgerbex
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)
