add_library(libgerbex
	Aperture.cpp
	ApertureTemplate.cpp
	ApertureTransformation.cpp
	Arc.cpp
	BlockAperture.cpp
	Circle.cpp
	CircleTemplate.cpp
	CommandHandler.cpp
	CommandsProcessor.cpp
	CoordinateData.cpp
	CoordinateFormat.cpp
	DataTypeParser.cpp
	Draw.cpp
	Flash.cpp
	FileParser.cpp
	FileProcessor.cpp
	GraphicalObject.cpp
	GraphicsState.cpp
	Macro.cpp
	MacroCenterLine.cpp
	MacroCircle.cpp
	MacroOutline.cpp
	MacroPolygon.cpp
	MacroPrimitive.cpp
	MacroTemplate.cpp
	MacroThermal.cpp
	MacroVectorLine.cpp
	Obround.cpp
	ObroundTemplate.cpp
	Polygon.cpp
	PolygonTemplate.cpp
	Rectangle.cpp
	RectangleTemplate.cpp
	Region.cpp
	RegionContour.cpp
	Segment.cpp
	StepAndRepeat.cpp
)

target_include_directories(libgerbex
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)
